--- a/about.html
+++ b/about.html
@@ -15,12 +15,12 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>冰冻三尺 非一日之寒<br>
-    积土成山 非斯须之作</p></blockquote>
+    <blockquote><p>周虽旧邦 其命维新<br>
+    治世不一道 便国不法古</p></blockquote>
 
-    <p>Hey，我是<strong>瑄瑄</strong>，一个爱理财的宝妈，现在上海工作。</p>
+    <p>Hey，我是<strong>瑄瑄</strong>，一个爱吐槽的宝妈，现在上海工作。</p>
 
-    <p>工作、学习之余，我还是一个网络小说爱好者，同时也非常喜欢睡觉。</p>
+    <p>我还是一个喜欢尝试各种理财方式的财迷。</p>
 
     <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/qiubaiying">👉GitHub·BY</a> 与 简书主页<a href="https://http://www.jianshu.com/u/e71990ada2fd">👉BY</a>。如果有什么问题，欢迎提出探讨~</p>
 
