--- a/about.html
+++ b/about.html
@@ -20,10 +20,8 @@ header-img: "img/post-bg-rwd.jpg"
 
     <p>Hey，我是<strong>瑄瑄</strong>，一个爱吐槽的宝妈，现在上海工作。</p>
 
-    <p>我还是一个喜欢尝试各种理财方式的财迷。</p>
-
-    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/qiubaiying">👉GitHub·BY</a> 与 简书主页<a href="https://http://www.jianshu.com/u/e71990ada2fd">👉BY</a>。如果有什么问题，欢迎提出探讨~</p>
-
+    <p>我喜欢尝试各种理财方式、爱吐槽新闻、电视、电影，以及生活中各种怪相。</p>
+ 
     <p></p>
     
     <h5>Talks</h5>
@@ -31,21 +29,16 @@ header-img: "img/post-bg-rwd.jpg"
     <ul>
         <li><a href="https://github.com">GitHub</a></li>
         <li><a href="http://jekyll.com.cn/">jekyll</a></li>
-        <li><a href="http://huangxuan.me/">Hux</a></li> 
+        <li><a href="https://hughhw.github.io">Heliuzx</a></li>
         <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li>
     </ul>
 </div>
 
 <!-- English Version -->
 <!-- <div class="en post-container">
-    <blockquote><p>Yet another iOS Developer. <br>
-    Yet another Life-long Student.</p></blockquote>
-
-    <p>Hi, I am <strong>Baiying Qiu</strong>，you can call me <strong>BY</strong>. I am an iOS software engineer and currently working in Xiamen</p>
-
-    <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="http://github.com/qiubaiying">Github·BY</a>.</p>
-    
-    <p>I am a sports enthusiast, I like fitness, running and boxing.</p>
+    <p>Hi, I am <strong>Liu zixuan</strong>，you can call me <strong>Xuan xuan</strong>. I am an project manager from a well known Trust Company in Shang Hai, China</p>
+   
+    <p>I am a family financing enthusiast, I enjoy roasting News/Tv show/Movies.</p>
 
     <h5>Talks</h5>
 
@@ -53,7 +46,7 @@ header-img: "img/post-bg-rwd.jpg"
     <li><a href="https://github.com">GitHub</a></li>
     <li><a href="http://jekyll.com.cn/">jekyll</a></li>
     <li><a href="https://pages.github.com/">GitHub Pages</a></li>
-    <li><a href="https://qiubaiying.github.io">BY</a></li>
+    <li><a href="https://hughhw.github.io">Heliuzx</a></li>
     </ul>
 </div> -->
 
